# ecg-classification

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
data/: X_train.npy  X_valid.npy  y.npy  y_train.npy  y_valid.npy
exploration/: exploration.ipynb
mlruns/0/: meta.yaml
mlruns/250017117451812396/: meta.yaml
mlruns/250017117451812396/07515a8d57cb49ddb8ba1c887a1d8c12/: meta.yaml
mlruns/250017117451812396/16574fd3827f4c7c83ad0698de206158/: meta.yaml
mlruns/250017117451812396/25dc8062f89c42d493b906a294818b97/: meta.yaml
mlruns/250017117451812396/2b7f75d6461f487dac307fcd685c85a8/: meta.yaml
mlruns/250017117451812396/39e2782ded724aea8047c4cc274cb4c5/: meta.yaml
mlruns/250017117451812396/3d37dd355cba487096d0114638c6d408/: meta.yaml
mlruns/250017117451812396/3f2028be833f4069a44e683a917d2fe9/: meta.yaml
mlruns/250017117451812396/4900ef9bdb80494caeb61a5f1c04643b/: meta.yaml
mlruns/250017117451812396/540937ca345e45688d56e82ee5ea2dad/: meta.yaml
mlruns/654383856422403796/: meta.yaml
mlruns/745906148205077127/: meta.yaml
mlruns/911493252910046327/: meta.yaml
mlruns/models/tsclassifier/: meta.yaml
reports/: classification_report.csv
src/: KPIs.py  app.py  model.py  model_optimization.py
src/data_processing/: data_preprocessing.py
src/deployment/: RestAPI.py
src/modeling/: KPIs.py  model.py  model_optimization.py  tools.py
src/reports/: classification_report.csv
src/streamlit_app/: app.py
tests/: test_fun.py  test_model.py  test_rest_api.py
(+428 files in other folders)
