[tool.poetry]
name = "time-series-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mlflow = "^2.12.1"
tensorflow = "^2.16.1"
plotly = "^5.21.0"
streamlit = "^1.33.0"
pytest = "^8.1.1"
python-dotenv = "^1.0.1"
aeon = "^0.8.1"
scikeras = "^0.13.0"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
